# sudoku-solver

./: README.md  prek.toml  pyproject.toml  sudoku.code-workspace
src/sudoku/: __init__.py  puzzle.py  solver.py
tests/: helpers.py  test_puzzle.py  test_solver.py
