[project]
name = "sudoku"
version = "0.1.0"
description = "A Sudoku solver built for fun."
readme = "README.md"
authors = [
    { name = "Josh Smeaton", email = "josh.smeaton@gmail.com" }
]
requires-python = ">=3.15"
dependencies = [
    "attrs>=26.1.0",
]

[project.scripts]
sudoku = "sudoku:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.14.1",
    "prek>=0.4.5",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.ruff]
line-length = 100
